--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-paginacao.qtd_por_pagina=25
+#paginacao.qtd_por_pagina=25
 #spring.profiles.active=teste
-
+spring.jpa.hibernate.ddl-auto=none
+spring.flyway.locations=classpath:db/migration
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/db-spring
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.hikari.schema=public
+spring.flyway.baseline-on-migrate=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
